kubernetes/sock-shop-monitoring/000-monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.utibeokon.me
        - grafana.utibeokon.me
        - alert.utibeokon.me
      secretName: letsencrypt-nginx-htnxv
  ingressClassName: nginx
  rules:
    - host: prometheus.utibeokon.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
    - host: grafana.utibeokon.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 80
    - host: alert.utibeokon.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
